--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 actix-web = "4"
 serde = {version = "1", features = ["derive"]}
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+config = "0.11"
 
 [dev-dependencies]
 reqwest = "0.11"
