--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -25,7 +25,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Cache dependencies
         id: cache-dependencies
         uses: actions/cache@v2
@@ -35,7 +34,6 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -49,7 +47,8 @@ jobs:
         with:
           path: |
             ~/.cargo/bin/sqlx
-          key: ${{ runner.os }}-sqlx-${{ env.SQLX_VERSION }}-${{ env.SQLX_FEATURES }}
+            ~/.cargo/bin/cargo-sqlx
+          key: ${{ runner.os }}-sqlx-${{ env.SQLX_VERSION }}-${{ env.SQLX_FEATURES }}-2
 
       - name: Install sqlx-cli 
         uses: actions-rs/cargo@v1
@@ -71,7 +70,7 @@ jobs:
 
       - name: Check sqlx-data.json is up-to-date
         run: |
-          cargo sqlx prepare --check -- --bin mailcrab
+          cargo sqlx prepare --check -- --bin mailcrab 
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
