--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 actix-web = "4"
 serde = { version = "1", features = ["derive"] }
+serde-aux = "3"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 config = "0.11"
 uuid = { version = "0.8.1", features = ["v4"] }
