--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,32 +13,33 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "4"
-serde = { version = "1", features = ["derive"] }
-serde-aux = "3"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-config = "0.11"
-uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.15"
-secrecy = { version = "0.8", features = ["serde"] }
-tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+config = "0.11"
+secrecy = {version = "0.8", features = ["serde"]}
+serde = {version = "1", features = ["derive"]}
+serde-aux = "3"
+tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+tracing = {version = "0.1", features = ["log"]}
+tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
-tracing-actix-web = "0.5"
+tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
+uuid = {version = "0.8.1", features = ["v4"]}
+unicode-segmentation = "1"
 
 [dev-dependencies]
-reqwest = "0.11"
 once_cell = "1"
+reqwest = "0.11"
 
 [dependencies.sqlx]
-version = "0.5.7"
 default-features = false
 features = [
-	"runtime-actix-rustls",
-	"macros",
-	"postgres",
-	"uuid",
-	"chrono",
-	"migrate",
-	"offline"
+  "runtime-actix-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate",
+  "offline",
 ]
+version = "0.5.7"
