--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tracing-log = "0.1"
 tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
 uuid = {version = "0.8.1", features = ["v4"]}
 unicode-segmentation = "1"
+validator = "0.14"
 
 [dev-dependencies]
 once_cell = "1"
