--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ actix-web = "4"
 chrono = "0.4.15"
 claim = "0.5"
 config = "0.11"
+reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 secrecy = {version = "0.8", features = ["serde"]}
 serde = {version = "1", features = ["derive"]}
 serde-aux = "3"
@@ -34,7 +35,6 @@ fake = "~2.3"
 once_cell = "1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-reqwest = "0.11"
 
 [dependencies.sqlx]
 default-features = false
