--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ fake = "~2.3"
 once_cell = "1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.5"
 
 [dependencies.sqlx]
 default-features = false
