--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
 unicode-segmentation = "1"
 uuid = {version = "0.8.1", features = ["v4"]}
 validator = "0.14"
+thiserror = "1"
 
 [dev-dependencies]
 fake = "~2.3"
