--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 actix-web = "4"
 anyhow = "1"
+argon2 = {version = "0.3", features = ["std"]}
 base64 = "0.13"
 chrono = "0.4.15"
 claim = "0.5"
