--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,14 @@ base64 = "0.13"
 chrono = "0.4.15"
 claim = "0.5"
 config = "0.11"
+hmac = { version = "0.12", features = ["std"] }
 htmlescape = "0.3"
 rand = {version = "0.8", features = ["std_rng"]}
 reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 secrecy = {version = "0.8", features = ["serde"]}
 serde = {version = "1", features = ["derive"]}
 serde-aux = "3"
+sha2 = "0.10"
 thiserror = "1"
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 tracing = "0.1"
