--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -19,12 +19,17 @@ jobs:
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
+      redis:
+        image: redis:6
+        ports:
+          - 6379:6379
     env:
       SQLX_VERSION: 0.5.7
       SQLX_FEATURES: postgres
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Cache dependencies
         id: cache-dependencies
         uses: actions/cache@v2
@@ -34,6 +39,7 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -162,6 +168,10 @@ jobs:
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
+      redis: 
+        image: redis:6
+        ports: 
+          - 6379:6379
     env:
       SQLX_VERSION: 0.5.7
       SQLX_FEATURES: postgres
